--- a/VarshaWeb/Views/EmployeeDashboard/AddEmployeeBasicInfo.cshtml
+++ b/VarshaWeb/Views/EmployeeDashboard/AddEmployeeBasicInfo.cshtml
@@ -178,10 +178,8 @@
                                 <div class="form-group">
                                     <label for="exampleInputPassword1">Probation Status</label>
                                     <div id="slWrapperProbation" class="parsley-select">
-                                        <select required="" class="form-control select2" ng-model="ngddlProbationstatus" data-parsley-class-handler="#slWrapperProbation" data-parsley-errors-container="#slErrorContainerProbation">
-                                            <option value="">
-                                                Choose one
-                                            </option>
+                                        <select required="" class="form-control select2"  id="ddlProbationStatus" ng-model="ngddlProbationstatus" data-parsley-class-handler="#slWrapperProbation" data-parsley-errors-container="#slErrorContainerProbation">
+                                          
                                             <option value="Probation">
                                                 Probation
                                             </option>
